# WilloWisp

./: .coverage  .gitignore  ARCHITECTURE_DESIGN.md  ARCHITECTURE_REQUIREMENTS.md  CLAUDE.md  ISCS_AutoClick_Overview.md  LIVE_VALIDATION.md  MIGRATION_CHECKLIST.md  README.md  RESTRUCTURE_DESIGN.md  RESTRUCTURE_MIGRATION.md  RESTRUCTURE_MIGRATION_READINESS.md  RESTRUCTURE_PLANNING.md  RESTRUCTURE_TRACEABILITY_CHECKLIST.md  SUITE_RUNNER_FLOW.md  SYSTEM_BLUEPRINT.md  baru.py  config.json  conftest.py  iscs_OCR.py  iscs_assets.json  iscs_assets.py  iscs_metadata.db  iscs_recorder.py  iscs_report_templates.py  iscs_reports.py  iscs_template.json  iscs_workflow.py  pyproject.toml  smoke_app.py
adapters/: README.md  __init__.py
core/: README.md  __init__.py  api.py
iscs_core/: __init__.py  backends.py  container.py  discovery.py  events.py  manifest.py  registry.py
plugins/: README.md
tests/: README.md  test_architecture_guards.py  test_assets_store.py  test_assets_versioning.py  test_b10_dropin.py  test_binding_resolvers.py  test_canvas_viewport.py  test_characterization_autoregister.py  test_characterization_report_html.py  test_characterization_verify.py  test_cli_commands.py  test_cli_composition.py  test_color_match.py  test_core_api.py  test_core_container.py  test_core_discovery.py  test_core_events.py  test_core_manifest.py  test_core_registry.py  test_engine_headless.py  test_expected_state_sweep.py  test_io_point_states.py  test_ocr_match.py  test_plugin_actions.py  test_plugin_delay.py  test_plugin_protocol.py  test_plugin_verify_alarm_panel.py  test_ports.py  (+22 more)
(+76 files in other folders)
